--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -27,7 +27,7 @@
   &-title {
     margin-top: 0px;
     margin-bottom: 10px;
-    color: $primary-text-color;
+    color: $title-nav-color;
     @include generalfont($line-height: 16px, $weight: bold, $size: 14px);
     text-transform: uppercase;
   }
