--- a/CSS/main.css
+++ b/CSS/main.css
@@ -684,8 +684,11 @@ header .auth-item:focus {
 
 .textarea {
   height: 120px;
+  width: 100%;
   margin-bottom: 30px;
   padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   resize: none;
 }
 
@@ -764,6 +767,7 @@ header .auth-item:focus {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   width: 100%;
+  height: 40px;
 }
 
 .modal-input:focus + .modal-label,
@@ -823,7 +827,7 @@ header .auth-item:focus {
 .feature-title {
   margin-top: 0px;
   margin-bottom: 10px;
-  color: #757575;
+  color: #212121;
   font-family: Roboto, sans-serif;
   font-style: normal;
   line-height: 16px;
