--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -79,8 +79,11 @@
 }
 .textarea {
   height: 120px;
+  width: 100%;
   margin-bottom: 30px;
   padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   resize: none;
 }
 .checkbox-icon {
@@ -139,6 +142,7 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   width: 100%;
+  height: 40px;
   &:focus + .modal-label,
   &:not(:placeholder-shown) + .modal-label {
     transform: translateX(-26px) translateY(-40px);
